<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".aut.create_accountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


                <ImageView
                    android:layout_width="268dp"
                    android:layout_height="367dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/yellow" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-50dp"
                    android:layout_marginTop="-50dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/tour" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="-200dp"
                    android:layout_marginEnd="150dp"
                    android:src="@drawable/tour2" />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="200dp"
                    android:backgroundTint="@color/backgroundcard"
                    app:cardCornerRadius="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                        <EditText
                            android:id="@+id/edusernamerig"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_user"
                            android:layout_marginLeft="09dp"
                            android:layout_marginRight="09dp"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/black1"
                            android:textStyle="bold"
                            android:background="@drawable/corner"
                            android:hint="@string/username"
                            tools:ignore="RtlSymmetry"
                            android:inputType="text"  />
                        <EditText
                            android:id="@+id/edpasswordrig"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginEnd="09dp"
                            android:layout_marginStart="09dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/corner"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:drawablePadding="10dp"
                            android:textColor="@color/black1"
                            android:inputType="textPassword"
                            android:drawableStart="@drawable/ic_password"
                            android:hint="@string/password"/>
                        <EditText
                            android:id="@+id/edemailrig"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="09dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_email"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:layout_marginRight="09dp"
                            android:layout_marginTop="15dp"
                            android:hint="@string/email"
                            android:textColor="@color/black1"
                            android:textStyle="bold"
                            android:background="@drawable/corner"
                            android:inputType="textEmailAddress" />
                        <EditText
                            android:id="@+id/edphonerig"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginEnd="09dp"
                            android:layout_marginStart="09dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/corner"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:drawablePadding="10dp"
                            android:textColor="@color/black1"
                            android:inputType="textEmailAddress"
                            android:drawableStart="@drawable/ic_phone"
                            android:hint="@string/phone"/>
                        <EditText
                            android:id="@+id/edaddresrig"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:hint="@string/addres"
                            android:drawablePadding="10dp"
                            android:textColor="@color/black1"
                            android:drawableStart="@drawable/ic_address"
                            android:layout_marginLeft="09dp"
                            android:layout_marginRight="09dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/corner"
                            android:inputType="textMultiLine"
                            tools:ignore="RtlSymmetry" />
                        <Spinner
                            android:id="@+id/spngenderrig"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="09dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="09dp"
                            android:background="@drawable/corner"
                            android:entries="@array/gender"
                            android:paddingLeft="09dp"
                            android:textColor="@color/black1"/>
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="09dp"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/birthdate" />
                            <EditText
                                android:id="@+id/date1"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:hint="@string/select_date"
                                android:textColorHint="@color/blue"
                                android:textSize="20sp"
                                android:layout_marginLeft="09dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="09dp"
                                android:paddingEnd="10dp"
                                android:background="@drawable/corner"
                                android:inputType="date"
                                android:textStyle="bold"
                                />
                            <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/by_pressing_next_you_agree_to_our" />
                        <TextView
                            android:id="@+id/tvxterms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:textSize="15sp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/terms_amp_conditions"
                            android:textColor="@color/YEELOW" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/btnrig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/cross"/>
                <ImageView
                    android:id="@+id/imgbackrig"
                    android:layout_width="41dp"
                    android:layout_height="34dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/icback1" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>