<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".aut.LOGIN_Activity">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="42sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edusernamelogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corner"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edpasswordlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/corner"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:textColor="@color/black1"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/forgetpasswordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:gravity="start"
                android:paddingTop="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/red"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/btnlogin"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/cross" />
            <TextView
                android:id="@+id/tvxcreateaccountllogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/you_are_new_create_new"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            tools:ignore="ExtraText">
            <TextView
                android:id="@+id/arabiclanuage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="اللغة العربية"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/englishLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="english"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</RelativeLayout>