<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context=".fragment.ExpationFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="05dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/expationbackHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icback1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="05dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:text="@string/name"
                        android:textSize="25sp" />
                    <EditText
                        android:id="@+id/ednameexp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:inputType="textAutoCorrect" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spndepartexp"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@color/spanner"
                        android:entries="@array/Department"
                        android:paddingStart="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spnpermissionexp"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@color/spanner"
                        android:entries="@array/PermissionType"
                        android:textColor="@color/textcolor"
                        android:paddingStart="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="05dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/permission_date"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/dateexp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="23dp"
                        android:background="@drawable/corner"
                        android:gravity="center"
                        android:hint="@string/select_date"
                        android:inputType="date"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColorHint="@color/purple"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="05dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/a_cause"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                    <EditText
                        android:id="@+id/edcauseexp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:inputType="textMultiLine" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="05dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/managing_director"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/edmanagernameexp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:inputType="text" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="05dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/notes"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/enotesexp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:inputType="textMultiLine" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="50dp">
                    <Button
                        android:id="@+id/btnsendexp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/corner1"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>